--- a/app/scss/_search.scss
+++ b/app/scss/_search.scss
@@ -7,18 +7,12 @@
  background-size: cover;
  min-height: 18.75rem;
  width: 100%;
- padding-top: 1.75rem;
+ padding-top: 1.6875rem;
  position: relative;
 
  @include breakpoint-up(large) {
   min-height: 17.5rem;
  }
-
- //  &__container {
- //   width: calc(100% - 1.5rem);
- //   margin: 0 auto;
- //   max-width: 34.75rem;
- //  }
 
  .container-mobile {
   margin: 0 auto;
@@ -29,8 +23,8 @@
   text-align: center;
   color: $white;
   font-size: 1.5rem;
-  font-weight: 600;
-  margin-bottom: 2.25rem;
+  font-weight: 500;
+  margin-bottom: 2.4375rem;
  }
 
  &__search--field {
@@ -61,24 +55,24 @@
   border: none;
   padding: 0 1.5625rem;
   background-color: $black;
+  cursor: pointer;
  }
 
  &__display {
   background-color: $white;
-  border-radius: 13px;
   padding: 1.625rem 0;
+  max-width: 34.75rem;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  border-radius: 13px;
+  box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.267);
   z-index: 1;
-
-  @include breakpoint-up(medium) {
-   max-width: 34.75rem;
-  }
 
   @include breakpoint-up(large) {
    max-width: 69.375rem;
-   //  min-height: 10.0625rem;
+   top: 100%;
+   transform: translate(-50%, -50%);
    padding: 2.6875rem 0;
   }
  }
@@ -91,7 +85,6 @@
   @include breakpoint-up(large) {
    flex-direction: row;
    justify-content: space-between;
-   // align-items: center;
    width: calc(100% - 4rem);
    display: grid;
    grid-template-columns: repeat(4, 1fr);
@@ -132,7 +125,7 @@
 
  &__display--label {
   text-transform: uppercase;
-  font-size: 0.6rem;
+  font-size: 0.625rem;
   font-weight: 600;
   letter-spacing: 1px;
   color: $SecondaryDarkGray;
@@ -148,6 +141,7 @@
  &__display--data {
   display: flex;
   justify-content: center;
+  font-size: 1.2rem;
   font-weight: 500;
 
   @include breakpoint-up(large) {
@@ -158,6 +152,56 @@
 }
 
 #mapid {
- min-height: 100vh;
+ height: calc(100vh - 17.5rem);
  z-index: 0;
 }
+
+.leaflet-control {
+ display: none;
+}
+
+.overlay {
+ position: fixed;
+ top: 0;
+ right: 0;
+ bottom: 0;
+ left: 0;
+ background-color: rgba(0, 0, 0, 0.473);
+ z-index: 3;
+ display: none;
+}
+
+.error {
+ position: relative;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+
+ padding: 2rem;
+ width: 15%;
+ border-radius: 13px;
+
+ position: absolute;
+ top: 25%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ background-color: #fff;
+ z-index: 4;
+ display: none;
+
+ &__message {
+  line-height: 1.6;
+ }
+}
+
+.btn-close {
+ position: absolute;
+ top: 10px;
+ right: 14px;
+ cursor: pointer;
+}
+
+.has-fade {
+ display: block;
+}
+
