--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ a {
 body {
   min-height: 100vh;
   font-family: "Rubik", sans-serif;
+  position: relative;
 }
 
 .flex-jc {
@@ -39,7 +40,7 @@ body {
   background-size: cover;
   min-height: 18.75rem;
   width: 100%;
-  padding-top: 1.75rem;
+  padding-top: 1.6875rem;
   position: relative;
 }
 @media (min-width: 64em) {
@@ -55,8 +56,8 @@ body {
   text-align: center;
   color: #ffffff;
   font-size: 1.5rem;
-  font-weight: 600;
-  margin-bottom: 2.25rem;
+  font-weight: 500;
+  margin-bottom: 2.4375rem;
 }
 .search__search--field {
   padding-bottom: 1.5rem;
@@ -84,24 +85,24 @@ body {
   border: none;
   padding: 0 1.5625rem;
   background-color: #000000;
+  cursor: pointer;
 }
 .search__display {
   background-color: #ffffff;
-  border-radius: 13px;
   padding: 1.625rem 0;
+  max-width: 34.75rem;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  border-radius: 13px;
+  box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.267);
   z-index: 1;
-}
-@media (min-width: 48em) {
-  .search__display {
-    max-width: 34.75rem;
-  }
 }
 @media (min-width: 64em) {
   .search__display {
     max-width: 69.375rem;
+    top: 100%;
+    transform: translate(-50%, -50%);
     padding: 2.6875rem 0;
   }
 }
@@ -151,7 +152,7 @@ body {
 }
 .search__display--label {
   text-transform: uppercase;
-  font-size: 0.6rem;
+  font-size: 0.625rem;
   font-weight: 600;
   letter-spacing: 1px;
   color: #969696;
@@ -167,6 +168,7 @@ body {
 .search__display--data {
   display: flex;
   justify-content: center;
+  font-size: 1.2rem;
   font-weight: 500;
 }
 @media (min-width: 64em) {
@@ -177,8 +179,94 @@ body {
 }
 
 #mapid {
-  min-height: 100vh;
+  height: calc(100vh - 17.5rem);
   z-index: 0;
+}
+
+.leaflet-control {
+  display: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.473);
+  z-index: 3;
+  display: none;
+}
+
+.error {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  width: 15%;
+  border-radius: 13px;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  z-index: 4;
+  display: none;
+}
+.error__message {
+  line-height: 1.6;
+}
+
+.btn-close {
+  position: absolute;
+  top: 10px;
+  right: 14px;
+  cursor: pointer;
+}
+
+.has-fade {
+  display: block;
+}
+
+.has-fade {
+  visibility: hidden;
+}
+
+@keyframes fade-in {
+  from {
+    visibility: hidden;
+    opacity: 0;
+  }
+  1% {
+    visibility: visible;
+    opacity: 0;
+  }
+  to {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+.fade-in {
+  animation: fade-in 150ms ease-in-out forwards;
+}
+
+@keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+  99% {
+    visibility: visible;
+    opacity: 0;
+  }
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+.fade-out {
+  animation: fade-out 150ms ease-in-out backwards;
 }
 
 /*# sourceMappingURL=main.css.map */
